--- a/exchangerates.html
+++ b/exchangerates.html
@@ -3,5 +3,6 @@
 </head>
 <body>
   <!-- START CODE Attention! Do not modify this code; --><script>var fm = "CNY";var to = "RUB,USD";var tz = "3";var sz = "1x164";var lg = "ru";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><!-- Attention! Do not modify this code; END CODE -->
+  <!-- START CODE Attention! Do not modify this code; --><script>var fm = "USD";var to = "RUB";var tz = "3";var sz = "1x127";var lg = "ru";var st = "default";var cd = 1;var am = 1</script><script src="//currencyrate.today/exchangerates"></script><!-- Attention! Do not modify this code; END CODE -->
 </body>
 </html>
